{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 63,
  "lineage": "0deda981-944e-8dcb-092c-db794491a2c1",
  "resources": [
    {
      "module": "module.meldm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0498a49a15494604f",
            "arn": "arn:aws:ec2:eu-central-1:957362393943:instance/i-04e5c52ff2b529442",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e5c52ff2b529442",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "meldm",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aee38c67cfc993b2",
            "private_dns": "ip-10-0-101-108.eu-central-1.compute.internal",
            "private_ip": "10.0.101.108",
            "public_dns": "ec2-18-185-103-237.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.185.103.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fef59a5e93153c26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c937b69f0bedee18",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0044375eb8d50a9b2"
            ]
          },
          "dependencies": [
            "module.meldm.data.aws_ami.ubuntu",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:security-group/sg-0044375eb8d50a9b2",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0044375eb8d50a9b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "owner_id": "957362393943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b66e3b9f6baaef8a",
            "association_id": "eipassoc-08de47ccb02dbff4e",
            "domain": "vpc",
            "id": "eipalloc-0b66e3b9f6baaef8a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-069f831eb9343b163",
            "private_dns": "ip-10-0-101-123.eu-central-1.compute.internal",
            "private_ip": "10.0.101.123",
            "public_dns": "ec2-35-157-71-9.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.157.71.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eu-central-1a"
            },
            "tags_all": {
              "Name": "dev-eu-central-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1436267377ed840",
            "association_id": "eipassoc-01096f18b3eb53227",
            "domain": "vpc",
            "id": "eipalloc-0e1436267377ed840",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-01f7d25e0b8d247a0",
            "private_dns": "ip-10-0-102-65.eu-central-1.compute.internal",
            "private_ip": "10.0.102.65",
            "public_dns": "ec2-35-157-92-199.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.157.92.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eu-central-1b"
            },
            "tags_all": {
              "Name": "dev-eu-central-1b"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003f70ac2663e59c0",
            "association_id": "eipassoc-0d34ea4e829bc2397",
            "domain": "vpc",
            "id": "eipalloc-003f70ac2663e59c0",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-02505cb8818220805",
            "private_dns": "ip-10-0-103-217.eu-central-1.compute.internal",
            "private_ip": "10.0.103.217",
            "public_dns": "ec2-3-69-4-217.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.4.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-eu-central-1c"
            },
            "tags_all": {
              "Name": "dev-eu-central-1c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:internet-gateway/igw-086f17c5ed81ccf37",
            "id": "igw-086f17c5ed81ccf37",
            "owner_id": "957362393943",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b66e3b9f6baaef8a",
            "connectivity_type": "public",
            "id": "nat-0998bf548ce4da2d1",
            "network_interface_id": "eni-069f831eb9343b163",
            "private_ip": "10.0.101.123",
            "public_ip": "35.157.71.9",
            "subnet_id": "subnet-0c937b69f0bedee18",
            "tags": {
              "Name": "dev-eu-central-1a"
            },
            "tags_all": {
              "Name": "dev-eu-central-1a"
            }
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_eip.nat",
            "module.meldm.module.vpc.aws_internet_gateway.this",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1436267377ed840",
            "connectivity_type": "public",
            "id": "nat-05c8d9a46f2b39004",
            "network_interface_id": "eni-01f7d25e0b8d247a0",
            "private_ip": "10.0.102.65",
            "public_ip": "35.157.92.199",
            "subnet_id": "subnet-0eae0cad50ea060e2",
            "tags": {
              "Name": "dev-eu-central-1b"
            },
            "tags_all": {
              "Name": "dev-eu-central-1b"
            }
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_eip.nat",
            "module.meldm.module.vpc.aws_internet_gateway.this",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003f70ac2663e59c0",
            "connectivity_type": "public",
            "id": "nat-0536f2345640a6713",
            "network_interface_id": "eni-02505cb8818220805",
            "private_ip": "10.0.103.217",
            "public_ip": "3.69.4.217",
            "subnet_id": "subnet-02eea0243eafc85b5",
            "tags": {
              "Name": "dev-eu-central-1c"
            },
            "tags_all": {
              "Name": "dev-eu-central-1c"
            }
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_eip.nat",
            "module.meldm.module.vpc.aws_internet_gateway.this",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039fb6329f9e438571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0998bf548ce4da2d1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039fb6329f9e43857",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.meldm.module.vpc.aws_eip.nat",
            "module.meldm.module.vpc.aws_internet_gateway.this",
            "module.meldm.module.vpc.aws_nat_gateway.this",
            "module.meldm.module.vpc.aws_route_table.private",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-017782c3de4d35a621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05c8d9a46f2b39004",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017782c3de4d35a62",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.meldm.module.vpc.aws_eip.nat",
            "module.meldm.module.vpc.aws_internet_gateway.this",
            "module.meldm.module.vpc.aws_nat_gateway.this",
            "module.meldm.module.vpc.aws_route_table.private",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09ffeea360956cbbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0536f2345640a6713",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ffeea360956cbbd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.meldm.module.vpc.aws_eip.nat",
            "module.meldm.module.vpc.aws_internet_gateway.this",
            "module.meldm.module.vpc.aws_nat_gateway.this",
            "module.meldm.module.vpc.aws_route_table.private",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-086f17c5ed81ccf37",
            "id": "r-rtb-0b076f102967f72291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b076f102967f7229",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.meldm.module.vpc.aws_internet_gateway.this",
            "module.meldm.module.vpc.aws_route_table.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:route-table/rtb-039fb6329f9e43857",
            "id": "rtb-039fb6329f9e43857",
            "owner_id": "957362393943",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0998bf548ce4da2d1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "dev-private-eu-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:route-table/rtb-017782c3de4d35a62",
            "id": "rtb-017782c3de4d35a62",
            "owner_id": "957362393943",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c8d9a46f2b39004",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "dev-private-eu-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:route-table/rtb-09ffeea360956cbbd",
            "id": "rtb-09ffeea360956cbbd",
            "owner_id": "957362393943",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0536f2345640a6713",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-eu-central-1c"
            },
            "tags_all": {
              "Name": "dev-private-eu-central-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:route-table/rtb-0b076f102967f7229",
            "id": "rtb-0b076f102967f7229",
            "owner_id": "957362393943",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086f17c5ed81ccf37",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0453d3b4e00acec39",
            "route_table_id": "rtb-039fb6329f9e43857",
            "subnet_id": "subnet-0ec3cdd085f9e11ac"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_route_table.private",
            "module.meldm.module.vpc.aws_subnet.private",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056c72d8455943b54",
            "route_table_id": "rtb-017782c3de4d35a62",
            "subnet_id": "subnet-0a732f335c27e96e2"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_route_table.private",
            "module.meldm.module.vpc.aws_subnet.private",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0e1a79b4f4e14ac",
            "route_table_id": "rtb-09ffeea360956cbbd",
            "subnet_id": "subnet-02dafde2ab3febcc6"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_route_table.private",
            "module.meldm.module.vpc.aws_subnet.private",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ede12e2b5928c027",
            "route_table_id": "rtb-0b076f102967f7229",
            "subnet_id": "subnet-0c937b69f0bedee18"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_route_table.public",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444ebcc7573f2d52",
            "route_table_id": "rtb-0b076f102967f7229",
            "subnet_id": "subnet-0eae0cad50ea060e2"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_route_table.public",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9f915491a50f806",
            "route_table_id": "rtb-0b076f102967f7229",
            "subnet_id": "subnet-02eea0243eafc85b5"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_route_table.public",
            "module.meldm.module.vpc.aws_subnet.public",
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:subnet/subnet-0ec3cdd085f9e11ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec3cdd085f9e11ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957362393943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "dev-private-eu-central-1a"
            },
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:subnet/subnet-0a732f335c27e96e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a732f335c27e96e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957362393943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "dev-private-eu-central-1b"
            },
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:subnet/subnet-02dafde2ab3febcc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dafde2ab3febcc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957362393943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-eu-central-1c"
            },
            "tags_all": {
              "Name": "dev-private-eu-central-1c"
            },
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:subnet/subnet-0c937b69f0bedee18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c937b69f0bedee18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957362393943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "dev-public-eu-central-1a"
            },
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:subnet/subnet-0eae0cad50ea060e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eae0cad50ea060e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957362393943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "dev-public-eu-central-1b"
            },
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:subnet/subnet-02eea0243eafc85b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02eea0243eafc85b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "957362393943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-eu-central-1c"
            },
            "tags_all": {
              "Name": "dev-public-eu-central-1c"
            },
            "vpc_id": "vpc-00e35fdbdbc75cf49"
          },
          "dependencies": [
            "module.meldm.module.vpc.aws_vpc.this",
            "module.meldm.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.meldm.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.meldm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:957362393943:vpc/vpc-00e35fdbdbc75cf49",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0884d0a6b65d8b304",
            "default_route_table_id": "rtb-0b973d90934494140",
            "default_security_group_id": "sg-0044375eb8d50a9b2",
            "dhcp_options_id": "dopt-03922e25996e06c9e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00e35fdbdbc75cf49",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b973d90934494140",
            "owner_id": "957362393943",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}